TP4/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: back-end-deployment
  namespace: development
spec:
  gatewayClassName: istio
  listeners:
  - protocol: HTTP
    port: 80
    name: svc-ms-ip-gw
    allowedRoutes:
      namespaces:
        from: Same
